deps/crates/vendor/zerocopy-derive/tests/ui/cfgs/on_error.nightly.stderr
error: `on_error` is experimental; pass '--cfg zerocopy_unstable_derive_on_error' to enable
  --> tests/ui-nightly/cfgs/on_error.rs:13:10
   |
13 | #[derive(FromBytes)]
   |          ^^^^^^^^^
   |
   = note: this error originates in the derive macro `FromBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `bool: FromBytes` is not satisfied
  --> tests/ui-nightly/cfgs/on_error.rs:13:10
   |
13 | #[derive(FromBytes)]
   |          ^^^^^^^^^ the trait `FromBytes` is not implemented for `bool`
   |
   = note: Consider adding `#[derive(FromBytes)]` to `bool`
   = help: the following other types implement trait `FromBytes`:
             ()
             (A, B)
             (A, B, C)
             (A, B, C, D)
             (A, B, C, D, E)
             (A, B, C, D, E, F)
             (A, B, C, D, E, F, G)
             (A, B, C, D, E, F, G, H)
           and $N others
   = help: see issue #48214
   = note: this error originates in the derive macro `FromBytes` (in Nightly builds, run with -Z macro-backtrace for more info)
help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   |
 9 + #![feature(trivial_bounds)]
   |
